Define role for user,example authority to access api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 tokenSecret=1ht792hzze1232fwq4
 
 #context path
-#server.serverlet.context-path=/quangconapp
+#server.servlet.context-path=/quang-2051TYHY-app
